admision page added extra 373px brackpoint

--- a/admission.html
+++ b/admission.html
@@ -405,8 +405,8 @@
               <label class="form-check-label" for="flexSwitchCheckDefault">I agree to the provided <a href="terms-conditions.html">Terms & Conditions.</a></label>
             </div>
             <div class="admiss_sub_btn text-center">
-              <button onclick="resetFile()" class="reset_btn">Reset All Files</button>
-              <button type="submit" class="main_btn submit_btn">Submit</button>
+              <button onclick="resetFile()" class="reset_btn main_btn">Reset All Files</button>
+              <button type="submit" class="submit_btn main_btn">Submit</button>
             </div>
           </div>
         </div>
