--- a/payment.html
+++ b/payment.html
@@ -17,28 +17,32 @@
   <link rel="stylesheet" href="css/venobox.min.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-offset="0" tabindex="0">
+<body>
+  <div class="back_to_top">
+    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+  </div>
   <!-- Top bar Part Strat -->
   <section id="top_bar">
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="more_info">
-            <h3>For more contact us <i class="fa fa-phone"></i><a href="tel:+88 01966177177">+88 01966177177</a></h3>
+            <h3>Contact us <i class="fa fa-phone"></i><a href="tel:+88 01966177177">+88 01966177177</a></h3>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="slogan">
-            <ul class="me-auto">
+            <ul>
               <li>Change</li>
               <li>Grow</li>
               <li>Succeed</li>
             </ul>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="social_link_top">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -74,7 +78,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#teachers">eSchool Team</a>
@@ -91,7 +95,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
