--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -78,10 +78,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -95,7 +95,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -131,10 +131,10 @@
     <div class="conditions">
       <ul class="nav nav-tabs">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="english-tab" data-bs-toggle="tab" data-bs-target="#english" type="button" role="tab" aria-controls="english" aria-selected="true">Terms & Conditions English</button>
+          <button class="nav-link active" id="english-tab" data-bs-toggle="tab" data-bs-target="#english" type="button" role="tab" aria-controls="english" aria-selected="true">Terms & Conditions</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="bangla-tab" data-bs-toggle="tab" data-bs-target="#bangla" type="button" role="tab" aria-controls="bangla" aria-selected="false">Terms & Conditions Bangla</button>
+          <button class="nav-link" id="bangla-tab" data-bs-toggle="tab" data-bs-target="#bangla" type="button" role="tab" aria-controls="bangla" aria-selected="false">শর্তাদি এবং শর্তসমূহ</button>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"></a>
