--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -95,7 +95,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -128,7 +128,7 @@
   <section id="registration">
     <div class="container">
       <div class="row">
-        <div class="col-lg-7">
+        <div class="col-lg-7 mb-5">
           <div class="contact_left">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.1702542298754!2d90.38039151492211!3d23.74130739504059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b7a55cd36f%3A0xfcc5b021faff43ea!2z4KaV4KeN4Kaw4Ka_4Kef4KeH4Kaf4Ka_4KatIOCmhuCmh-Cmn-CmvyDgpofgpqjgprjgp43gpp_gpr_gpp_gpr_gpongpp8!5e0!3m2!1sbn!2sbd!4v1623515726032!5m2!1sbn!2sbd" width="100%" height="480" allowfullscreen="" loading="lazy"></iframe>
           </div>
@@ -171,7 +171,7 @@
       </div>
 
       <div class="row office_address">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-xl-3 col-lg-6 col-md-6">
           <div class="cont_location">
             <div class="location_icon">
               <i class="fa fa-thumb-tack" aria-hidden="true"></i>
@@ -184,7 +184,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-xl-3 col-lg-6 col-md-6">
           <div class="cont_location">
             <div class="location_icon">
               <i class="fa fa-thumb-tack" aria-hidden="true"></i>
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-xl-3 col-lg-6 col-md-6">
           <div class="cont_location">
             <div class="location_icon">
               <i class="fa fa-thumb-tack" aria-hidden="true"></i>
@@ -206,7 +206,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-xl-3 col-lg-6 col-md-6">
           <div class="cont_location">
             <div class="location_icon">
               <i class="fa fa-thumb-tack" aria-hidden="true"></i>
