--- a/course.html
+++ b/course.html
@@ -77,10 +77,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -94,7 +94,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -126,7 +126,7 @@
               <p>In the internet there are numerous websites. Through designing these websites you can bring out your
                 creativity. To enrich your career Creative E-School will give you the opportunity of learning to design
                 any kind of website through the online courses.</p>
-                <a href="#">Read More</a>
+                <a href="web-design.html">Read More</a>
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
                 <h3>Digital Marketing</h3>
               <h4><span>Class : 48</span> <span>Duration : Six-Month</span></h4>
               <p>In this era of information technology Digital Marketing is one of the most practiced topic of the world. Be it small or be it big digital marketing has become very popular to promote any kind of business or product in such an affordable cost. </p>
-                <a href="#">Read More</a>
+                <a href="digital-marketing.html">Read More</a>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
                 <h3>Graphic Design</h3>
                 <h4><span>Class : 48</span> <span>Duration : Six-Month</span></h4>
                 <p>Graphic Design. It is a well renowned and respectable profession. There is a great value of a graphic designer not only in our country but also across the whole world. To be an expert designer one has to have a heart of creativity and excellence. To create a good design one needs to know some grammar of art as well.</p>
-                <a href="#">Read More</a>
+                <a href="graphic-design.html">Read More</a>
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
           </div>
         </div>
 
-        <div class="corses_btn"><a href="#">Our All Corses</a></div>
+        <div class="corses_btn"><a href="course.html">Our All Corses</a></div>
       </div>
     </div>
   </section>
