--- a/graphic-design.html
+++ b/graphic-design.html
@@ -78,10 +78,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -95,7 +95,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -134,7 +134,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="course_detiles_pic">
-            <img src="images/digital_marketign.png" alt="About image" class="img-fluid w-100">
+            <img src="images/graphic-design.png" alt="About image" class="img-fluid w-100">
           </div>
         </div>
         <div class="col-md-7">
