all #link Check

--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -205,7 +205,7 @@
               <li><a href="#">Job Placement</a></li>
               <li><a href="#">Freelancing Success</a></li>
               <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact us</a></li>
+              <li><a href="course.html">Contact us</a></li>
             </ul>
           </div>
         </div>
