--- a/registration.html
+++ b/registration.html
@@ -79,10 +79,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -96,7 +96,7 @@
             </a>
             <ul class="dropdown_menu">
               <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -300,7 +300,7 @@
               <li><a href="#">Job Placement</a></li>
               <li><a href="#">Freelancing Success</a></li>
               <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>
         </div>
@@ -320,7 +320,7 @@
               </div>
               <div class="col-6">
                 <ul class="links">
-                  <li><a href="#">Web Design</a>
+                  <li><a href="web-design.html">Web Design</a>
                   <li><a href="#">Web Design</a>
                   <li><a href="#">Graphic Design</a>
                   <li><a href="#">CCNA</a>
