--- a/teacher.html
+++ b/teacher.html
@@ -319,7 +319,7 @@
           </div>
         </div>
 
-        <div class="teacher_btn"><a href="#">all expert teacher</a></div>
+        <div class="teacher_btn"><a href="teacher.html">all expert teacher</a></div>
 
       </div>
     </div>
@@ -366,7 +366,7 @@
               <li><a href="#">Job Placement</a></li>
               <li><a href="#">Freelancing Success</a></li>
               <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>
         </div>
@@ -386,7 +386,7 @@
               </div>
               <div class="col-6">
                 <ul class="links">
-                  <li><a href="#">Web Design</a>
+                  <li><a href="web-design.html">Web Design</a>
                   <li><a href="#">Web Design</a>
                   <li><a href="#">Graphic Design</a>
                   <li><a href="#">CCNA</a>
