Footer #link check

--- a/admission.html
+++ b/admission.html
@@ -458,7 +458,7 @@
               <li><a href="#">Job Placement</a></li>
               <li><a href="#">Freelancing Success</a></li>
               <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact us</a></li>
+              <li><a href="contact.html">Contact us</a></li>
             </ul>
           </div>
         </div>
@@ -478,7 +478,7 @@
               </div>
               <div class="col-6">
                 <ul class="links">
-                  <li><a href="#">Web Design</a>
+                  <li><a href="web-design.html">Web Design</a>
                   <li><a href="#">Web Design</a>
                   <li><a href="#">Graphic Design</a>
                   <li><a href="#">CCNA</a>
