--- a/teacher.html
+++ b/teacher.html
@@ -387,7 +387,7 @@
               <div class="col-6">
                 <ul class="links">
                   <li><a href="web-design.html">Web Design</a>
-                  <li><a href="#">Web Design</a>
+                  <li><a href="web-design.html">Web Design</a>
                   <li><a href="#">Graphic Design</a>
                   <li><a href="#">CCNA</a>
                   <li><a href="#">Communicative English</a>
