--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -225,7 +225,7 @@
               </div>
               <div class="col-6">
                 <ul class="links">
-                  <li><a href="#">Web Design</a>
+                  <li><a href="web-design.html">Web Design</a>
                   <li><a href="#">Web Design</a>
                   <li><a href="#">Graphic Design</a>
                   <li><a href="#">CCNA</a>
