--- a/admission.html
+++ b/admission.html
@@ -78,7 +78,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="teacher.html">eSchool Team</a>
