--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -60,7 +60,7 @@
   <!-- Navbar Part Start -->
   <nav class="navbar navbar-expand-lg header">
     <div class="container">
-      <a class="navbar-brand logo" href="#">
+      <a class="navbar-brand logo" href="index.html">
         <img src="images/logo.png" alt="Brand Logo">
       </a>
       <button class="navbar-toggler toggle_btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -94,7 +94,7 @@
               Payment <i class="fa fa-angle-down"></i>
             </a>
             <ul class="dropdown_menu">
-              <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
+              <li><a class="nav-link drop_item" href="admision-payment.html">Admission Payment</a></li>
               <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
