--- a/web-design.html
+++ b/web-design.html
@@ -60,7 +60,7 @@
   <!-- Navbar Part Start -->
   <nav class="navbar navbar-expand-lg header">
     <div class="container">
-      <a class="navbar-brand logo" href="#">
+      <a class="navbar-brand logo" href="index.html">
         <img src="images/logo.png" alt="Brand Logo">
       </a>
       <button class="navbar-toggler toggle_btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -78,10 +78,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Courses</a>
+            <a class="nav-link" href="course.html">Courses</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#teachers">eSchool Team</a>
+            <a class="nav-link" href="teacher.html">eSchool Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="registration.html">Registration</a>
@@ -94,8 +94,8 @@
               Payment <i class="fa fa-angle-down"></i>
             </a>
             <ul class="dropdown_menu">
-              <li><a class="nav-link drop_item" href="#">Admission Payment</a></li>
-              <li><a class="nav-link drop-item" href="#">Installment Payment</a></li>
+              <li><a class="nav-link drop_item" href="admision-payment.html">Admission Payment</a></li>
+              <li><a class="nav-link drop-item" href="payment.html">Installment Payment</a></li>
             </ul>
           </li>
           <li class="nav-item">
