Resistration page left site images margin-bottom set for small divice

--- a/contact.html
+++ b/contact.html
@@ -137,6 +137,7 @@
         <div class="col-lg-5">
           <div class="admission_form">
             <h3 class="pay_headline">Online Payment</h3>
+            <form action="#">
             <div class="form-floating admission_input">
               <input type="text" class="form-control" id="contFristName" placeholder="Frist Name">
               <label for="contFristName">Frist Name</label>
@@ -165,7 +166,7 @@
             </div>
 
             <button class="main_btn payment_btn" type="submit">Submit</button>
-
+          </form>
           </div>
         </div>
       </div>
