--- a/payment.html
+++ b/payment.html
@@ -137,6 +137,8 @@
         <div class="col-md-6">
           <div class="admission_form">
             <h3 class="pay_headline">Online Payment</h3>
+
+            <form action="#">
             <div class="form-floating admission_input">
               <input type="text" class="form-control" id="payFullName" placeholder="Frist Name">
               <label for="payFullName">Full Name</label>
@@ -182,7 +184,7 @@
             </div>
 
             <button class="main_btn payment_btn" type="submit">Submit</button>
-
+          </form>
           </div>
         </div>
       </div>
