--- a/registration.html
+++ b/registration.html
@@ -129,7 +129,7 @@
   <section id="registration">
     <div class="container">
       <div class="row">
-        <div class="col-xl-4 col-lg-5">
+        <div class="col-xl-4 col-lg-5 margin_small">
           <div class="requirements">
             <div class="requirement_overly">
               <h3>Requirements before registration</h3>
@@ -151,6 +151,7 @@
           </div>
         </div>
         <div class="col-xl-8 col-lg-7">
+          <form action="#">
           <div class="row margin_top">
             <div class="col-lg-6">
               <div class="reg_form">
@@ -253,6 +254,7 @@
               <button type="submit" class="main_btn">Registration</button>
             </div>
           </div>
+        </form>
         </div>
       </div>
     </div>
