--- a/admission.html
+++ b/admission.html
@@ -128,6 +128,7 @@
   <section id="registration">
     <div class="container">
       <h3>Online Admission</h3>
+      <form action="#">
       <div class="row">
         <div class="col-md-6">
           <div class="admission_form">
@@ -411,6 +412,7 @@
           </div>
         </div>
       </div>
+    </form>
     </div>
     </div>
   </section>
