added video-editing page

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
               <p>In the internet there are numerous websites. Through designing these websites you can bring out your
                 creativity. To enrich your career Creative E-School will give you the opportunity of learning to design
                 any kind of website through the online courses.</p>
-                <a href="#">Read More</a>
+                <a href="web-design.html">Read More</a>
               </div>
             </div>
           </div>
@@ -474,7 +474,7 @@
                 <h3>Digital Marketing</h3>
               <h4><span>Class : 48</span> <span>Duration : Six-Month</span></h4>
               <p>In this era of information technology Digital Marketing is one of the most practiced topic of the world. Be it small or be it big digital marketing has become very popular to promote any kind of business or product in such an affordable cost. </p>
-                <a href="#">Read More</a>
+                <a href="digital-marketing.html">Read More</a>
               </div>
             </div>
           </div>
@@ -488,7 +488,7 @@
                 <h3>Graphic Design</h3>
                 <h4><span>Class : 48</span> <span>Duration : Six-Month</span></h4>
                 <p>It is a well renowned and respectable profession. There is a great value of a graphic designer not only in our country but also across the whole world. To be an expert designer one has to have a heart of creativity and excellence. To create a good design one needs to know some grammar of art as well.</p>
-                <a href="#">Read More</a>
+                <a href="graphic-design.html">Read More</a>
               </div>
             </div>
           </div>
@@ -502,7 +502,7 @@
                 <h3>Video Editing</h3>
               <h4><span>Class : 48</span> <span>Duration : Six-Month</span></h4>
               <p>Videos are great for telling a story. With the mix of sound and music, video delivers complex ideas in an easy and attractive way. It creates an instant appeal to even those who are not willing to pay attention. But not every video has the same effect. Engaging video demands a careful mastery of production. </p>
-                <a href="#">Read More</a>
+                <a href="video-editing.html">Read More</a>
               </div>
             </div>
           </div>
