--- a/web-design.html
+++ b/web-design.html
@@ -28,21 +28,21 @@
   <section id="top_bar">
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="more_info">
-            <h3>For more contact us <i class="fa fa-phone"></i><a href="tel:+88 01966177177">+88 01966177177</a></h3>
+            <h3>Contact us <i class="fa fa-phone"></i><a href="tel:+88 01966177177">+88 01966177177</a></h3>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="slogan">
-            <ul class="me-auto">
+            <ul>
               <li>Change</li>
               <li>Grow</li>
               <li>Succeed</li>
             </ul>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="social_link_top">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
